:memo: Docs: 更新nb-cli运行脚本; 修改md文本格式

--- a/website/docs/appendices/config.mdx
+++ b/website/docs/appendices/config.mdx
@@ -180,7 +180,7 @@ nonebot.init(_env_file=".env.dev")
 
 在一个涉及大量配置项的项目中，通过直接读取配置项的方式显然并不高效。同时，由于额外的全局配置项没有预先定义，开发时编辑器将无法提示字段与类型，并且运行时没有对配置项直接进行合法性检查。那么就需要一种方式来规范定义插件配置项。
 
-插件的配置除了用来保存 api_key 以及类似的配置项以外，也常用于保存插件的状态。例如下方代码的 `weather_plugin_enabled` 就用于保存插件是否启用。[权限控制](./permission.mdx)中我们将学习如何只允许超级用户通过消息命令设置插件的状态。
+插件的配置除了用来保存 `api_key` 以及类似的配置项以外，也常用于保存插件的状态。例如下方代码的 `weather_plugin_enabled` 就用于保存插件是否启用。[权限控制](./permission.mdx)中我们将学习如何只允许超级用户通过消息命令设置插件的状态。
 
 在 NoneBot 中，我们使用强大高效的 `pydantic` 来定义配置模型，这个模型可以被用于配置的读取和类型检查等。例如在 `weather` 插件目录中新建 `config.py` 来定义一个模型：
 
