更新 Windows 系统设置环境变量的方法
Windows 系统中有两种命令行, 其中的 powershell 设置命令行的方式和 cmd 有所不同, 本 commit 更新了 powershell 中正确设置环境变量的方法

--- a/website/versioned_docs/version-2.3.2/appendices/config.mdx
+++ b/website/versioned_docs/version-2.3.2/appendices/config.mdx
@@ -73,8 +73,10 @@ CUSTOM_CONFIG=config in dotenv
 同时，设置环境变量：
 
 ```bash
-# windows
+# windows cmd
 set CUSTOM_CONFIG "config in environment variables"
+# windows powershell
+$env:CUSTOM_CONFIG="config in environment variables"
 # linux/macOS
 export CUSTOM_CONFIG="config in environment variables"
 ```
