--- a/website/versioned_docs/version-2.3.1/appendices/config.mdx
+++ b/website/versioned_docs/version-2.3.1/appendices/config.mdx
@@ -73,8 +73,10 @@ CUSTOM_CONFIG=config in dotenv
 同时，设置环境变量：
 
 ```bash
-# windows
+# windows cmd
 set CUSTOM_CONFIG "config in environment variables"
+# windows powershell
+$env:CUSTOM_CONFIG="config in environment variables"
 # linux/macOS
 export CUSTOM_CONFIG="config in environment variables"
 ```
