:memo: try fixing mdx parse

--- a/website/docs/appendices/config.mdx
+++ b/website/docs/appendices/config.mdx
@@ -166,7 +166,7 @@ COMMON_CONFIG=common config  # 这个配置项在任何环境中都会被加载
 在生产环境中，可以通过设置环境变量 `ENVIRONMENT=prod` 来确保 NoneBot 读取正确的环境配置。
 :::
 
-#### .env.{ENVIRONMENT} 文件
+#### .env.\{ENVIRONMENT\} 文件
 
 `.env.{ENVIRONMENT}` 文件类似于预设，可以让我们在多套不同的配置方案中灵活切换，默认 NoneBot 会读取 `.env.prod` 配置。如果你使用了 `nb-cli` 创建 `simple` 项目，那么将含有两套预设配置：`.env.dev` 和 `.env.prod`。
 
