:memo: Docs: 升级到 Docusaurus V3 (#2956)

--- a/website/docs/ospp/2021.md
+++ b/website/docs/ospp/2021.md
@@ -1,13 +1,15 @@
 ---
 sidebar_position: 0
 description: 开源软件供应链点亮计划 - 暑期 2021
+mdx:
+  format: md
 ---
 
 # 暑期 2021
 
 **开源软件供应链点亮计划 - 暑期 2021** 是**中国科学院软件研究所**与 **openEuler 社区**共同举办的一项面向高校学生的暑期活动，旨在鼓励在校学生积极参与开源软件的开发维护，促进优秀开源软件社区的蓬勃发展。关于具体的活动规划、报名方式，请查看该活动的 [官网](https://summer.iscas.ac.cn/) 和 [帮助文档](https://summer.iscas.ac.cn/help/)。
 
-NoneBot 社区有幸作为开源社区参与了本次活动，下面列出了目前我们已经发布的项目，欢迎感兴趣的同学在上面给出的活动官网报名，或通过 <contact@nonebot.dev> 联系我们。
+NoneBot 社区有幸作为开源社区参与了本次活动，下面列出了目前我们已经发布的项目，欢迎感兴趣的同学在上面给出的活动官网报名，或通过 [contact@nonebot.dev](mailto:contact@nonebot.dev) 联系我们。
 
 ## NoneBot v1
 
