--- a/website/docs/appendices/config.mdx
+++ b/website/docs/appendices/config.mdx
@@ -284,7 +284,7 @@ WEATHER__COMMAND_PRIORITY=10
 - **类型**: `str`
 - **默认值**: `"~fastapi"`
 
-NoneBot 运行所使用的驱动器。具体配置方法可以参考[安装驱动器](../tutorial/store.mdx#安装驱动器)和[选择驱动器](../advanced/driver.md)。
+NoneBot 运行所使用的驱动器。具体配置方法可以参考[安装驱动器](../store.mdx#安装驱动器)和[选择驱动器](../advanced/driver.md)。
 
 <Tabs groupId="configMethod">
   <TabItem value="dotenv" label="dotenv" default>
