--- a/website/docs/best-practice/alconna/README.mdx
+++ b/website/docs/best-practice/alconna/README.mdx
@@ -30,7 +30,7 @@ import TabItem from "@theme/TabItem";
 
 ## 安装插件
 
-在使用前请先安装 `nonebot-plugin-alconna` 插件至项目环境中，可参考[获取商店插件](../../tutorial/store.mdx#安装插件)来了解并选择安装插件的方式。如：
+在使用前请先安装 `nonebot-plugin-alconna` 插件至项目环境中，可参考[获取商店插件](../../store.mdx#安装插件)来了解并选择安装插件的方式。如：
 
 在**项目目录**下执行以下命令：
 
