:memo: 修复 store.mdx 中的引用

--- a/website/docs/store.mdx
+++ b/website/docs/store.mdx
@@ -52,7 +52,7 @@ $ nb plugin install
 pip install <插件包名>
 ```
 
-插件包名可以在商店插件卡片中找到，或者使用 `nb-cli` 搜索插件显示的详情中找到。安装完成后，需要参考[加载插件章节](./create-plugin.md#加载插件)自行加载。
+插件包名可以在商店插件卡片中找到，或者使用 `nb-cli` 搜索插件显示的详情中找到。安装完成后，需要参考[加载插件章节](./tutorial/create-plugin.md#加载插件)自行加载。
 
   </TabItem>
 </Tabs>
@@ -132,7 +132,7 @@ $ nb adapter install
 pip install <适配器包名>
 ```
 
-适配器包名可以在商店适配器卡片中找到，或者使用 `nb-cli` 搜索适配器显示的详情中找到。安装完成后，需要参考[注册适配器章节](../advanced/adapter.md#注册适配器)自行注册。
+适配器包名可以在商店适配器卡片中找到，或者使用 `nb-cli` 搜索适配器显示的详情中找到。安装完成后，需要参考[注册适配器章节](./advanced/adapter.md#注册适配器)自行注册。
 
   </TabItem>
 </Tabs>
@@ -190,7 +190,7 @@ pip uninstall <适配器包名>
 
 如果你使用了虚拟环境，请在你的**项目目录**下执行该命令，`nb-cli` 会自动安装驱动器到虚拟环境中。
 
-请注意 `nb-cli` 并不会在安装驱动器后修改项目所使用的驱动器，请自行参考[配置方法](../appendices/config.mdx)章节以及 [`DRIVER` 配置项](../appendices/config.mdx#driver)修改驱动器。
+请注意 `nb-cli` 并不会在安装驱动器后修改项目所使用的驱动器，请自行参考[配置方法](./appendices/config.mdx)章节以及 [`DRIVER` 配置项](./appendices/config.mdx#driver)修改驱动器。
 
 <Tabs groupId="cli-install">
   <TabItem value="cli" label="使用命令" default>
