--- a/website/docs/best-practice/testing/README.mdx
+++ b/website/docs/best-practice/testing/README.mdx
@@ -81,6 +81,7 @@ pip install pytest-asyncio
 ```toml
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "session"
 ```
 
 然后，我们在 `tests` 目录下新建 `conftest.py` 文件，添加以下内容：
