--- a/website/versioned_docs/version-2.3.1/developer/plugin-publishing.mdx
+++ b/website/versioned_docs/version-2.3.1/developer/plugin-publishing.mdx
@@ -194,7 +194,7 @@ twine upload dist/*                 # 只发布先前的构建
 插件发布 Issue 创建后，将会经过 **NoneFlow Bot** 的自动前置检查，以确保插件信息正确无误、插件能被正确加载。
 
 :::tip 提示
-若插件检查未通过或信息有误，**不必**关闭当前 Issue。只需更新插件并上传到 PyPI/修改信息后在当前 Issue 追加任意内容的评论（如“已更新”等）即可重新触发插件检查。
+若插件检查未通过或信息有误，**不必**关闭当前 Issue。只需更新插件并上传到 PyPI/修改信息后勾选插件测试勾选框即可重新触发插件检查。
 :::
 
 之后，NoneBot 的维护者和一些插件开发者会初步检查插件代码，帮助减少该插件的问题。
