:memo: Docs: 添加第三方插件模版

--- a/website/versioned_docs/version-2.3.3/developer/plugin-publishing.mdx
+++ b/website/versioned_docs/version-2.3.3/developer/plugin-publishing.mdx
@@ -48,7 +48,10 @@ NoneBot 插件使用下述命名规范：
 
 #### 第三方项目模板
 
-一些社区用户可能会分享自己制作的项目模板方便大家使用，如：[A-kirami/nonebot-plugin-template](https://github.com/A-kirami/nonebot-plugin-template) 等。
+一些社区用户可能会分享自己制作的项目模板方便大家使用，如：
+
+- [A-kirami/nonebot-plugin-template](https://github.com/A-kirami/nonebot-plugin-template)
+- [fllesser/nonebot-plugin-template](https://github.com/fllesser/nonebot-plugin-template)
 
 :::tip 提示
 本文档**不保证**第三方模板的适用性。
