:pencil2: fix link

--- a/website/docs/best-practice/alconna/matcher.mdx
+++ b/website/docs/best-practice/alconna/matcher.mdx
@@ -84,7 +84,7 @@ def on_alconna(
 ```
 
 - `command`: Alconna 命令或字符串，字符串将通过 `AlconnaFormat` 转换为 Alconna 命令
-- `rule`: 事件响应规则， 详见 [响应器规则](../advanced/matcher.md#事件响应规则)
+- `rule`: 事件响应规则， 详见 [响应器规则](../../advanced/matcher.md#事件响应规则)
 - `skip_for_unmatch`: 是否在命令不匹配时跳过该响应, 默认为 `True`
 - `auto_send_output`: 是否自动发送输出信息并跳过该响应。
   - `True`：自动发送输出信息并跳过该响应
