--- a/website/docs/best-practice/alconna/uniseg/message.mdx
+++ b/website/docs/best-practice/alconna/uniseg/message.mdx
@@ -194,7 +194,7 @@ msg.extend([Text("text")])
 
 ### 使用消息模板
 
-`UniMessage.template` 同样类似于 `Message.template`，可以用于格式化消息，大体用法参考 [消息模板](../../tutorial/message#使用消息模板)。
+`UniMessage.template` 同样类似于 `Message.template`，可以用于格式化消息，大体用法参考 [消息模板](../../../tutorial/message#使用消息模板)。
 
 这里额外说明 `UniMessage.template` 的拓展控制符
 
