:pencil2: fix link

--- a/website/docs/best-practice/alconna/matcher.mdx
+++ b/website/docs/best-practice/alconna/matcher.mdx
@@ -147,8 +147,8 @@ async def handle(
 
 `AlconnaMatcher` 的依赖注入拓展支持以下情况：
 - `xxx: CommandResult`
-- `xxx: Arparma`：命令的[解析结果](../command.md#解析结果)
-- `xxx: Duplication`：命令的解析结果的 [`Duplication`](../command.md#Duplication)
+- `xxx: Arparma`：命令的[解析结果](./command.md#解析结果)
+- `xxx: Duplication`：命令的解析结果的 [`Duplication`](./command.md#Duplication)
 - `xxx: Alconna`：命令的源命令
 - `<key>: Match[<type>]`：上述的匹配项，使用 `key` 作为查询路径
 - `xxx: Query[<type>] = Query(<path>, default)`：上述的查询项，必需声明默认值以设置查询路径 `path`
